# s800GRETINA

./: CMakeLists.txt  README.md  SConstruct  config.json  gretina.set  rootlogon.C
MergeSrc/: MergeModes.cpp  RdGeCalFile.c  Structures.h
include/: AddGlobalHeaders.h  CHICO.h  CHICODefinitions.h  DFMA.h  Defines.h  GODDESS.h  GRETINA.h  GRETINADict.h  GRETINAWavefunction.h  Globals.h  GlobalsAGH.h  Histos.h  INLCorrection.h  LENDA-Controls.h  LENDA-DDAS.h  LendaDict.h  LinkDefCHICO.h  LinkDefDFMA.h  LinkDefGODDESS.h  LinkDefGRETINA.h  LinkDefLenda.h  LinkDefPhosWall.h  PhosWall.h  S800Functions.h  S800Parameters.h  SortingStructures.h  Track.h  Tree.h  Unpack.h  UnpackUtilities.h  Utilities.h  chicoDict.h  colors.h  ddasChannel.h  decompViewer.h  decompViewerLinkDef.h  phosWallDict.h
macros/: doSuperX3Calibration.C  plotCoincMatrix.C  plotGammas.C  plotOnline.C  plotRatios.C  plotSi.C
s800Calibrations/: s800.set
src/: AddGlobalHeaders.cpp  CHICO.cpp  DFMA.cpp  G3Waveform.cpp  GRETINA.cpp  Globals.cpp  Histos.cpp  INLCorrection.cpp  LENDA-Controls.cpp  LENDA-DDAS.cpp  PhosWall.cpp  ROOTGates.var  S800Functions.cpp  S800Parameters.cpp  SortingStructures.cpp  SuperPulse.cpp  Track.cpp  Unpack.cpp  UnpackUtilities.cpp  ddasChannel.cpp  decompViewer.cpp
src/GODDESSsrc/: GODBB10.cpp  GODDESS.cpp  GODIonChamber.cpp  GODQQQ5.cpp  GODSuperX3.cpp
src/hfc/: GEB_HFC
